initial password saving hookup

--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -65,8 +65,8 @@
                 <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
             </form>
             <div class="password_buttons">
-	            <button ng-click="passwordCancelled()" class="pass_Save">Save</button>
-	            <button ng-click="passwordSaved()" class="pass_cancel">Cancel</button>
+	            <button ng-click="passwordSaved()" class="pass_Save">Save</button>
+	            <button ng-click="passwordCancelled()" class="pass_cancel">Cancel</button>
             </div>
         </div>
     </div>
