fix bugs and hard coded links

--- a/src/app/download/download.tpl.html
+++ b/src/app/download/download.tpl.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="learn-more">
-        <a type="button" href="http://pigion-web.herokuapp.com" class="btn btn-lg btn-success download">Learn More</a>
+        <a type="button" href="http://pigion.co" class="btn btn-lg btn-success download">Learn More</a>
     </div>
 </div>
 
