--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -51,7 +51,7 @@
                     <div class="delete">
                         <i class="fa fa-trash fa-lg"></i>
                     </div>
-					<a href="" clip-click-fallback="fallback(copy)" clip-copy="downloadPageUrl" clip-click="doSomething()">
+					<a href="" clip-click-fallback="fallback(copy)" clip-copy="downloadPageUrl">
                     	<div class="copy">
                         	copy
                     	</div>
