Updates on the Sign Up, Sign In, Hot Keys Page Dashboard and Password Entry

--- a/src/app/dashboard/dashboard.tpl.html
+++ b/src/app/dashboard/dashboard.tpl.html
@@ -7,7 +7,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container container-fluid">
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse nopad" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav">
                 <a class="navbar-brand pull-left" href="#"><img src="assets/images/logo.png" class="logo"></a>
@@ -22,9 +22,9 @@
                                 <li><a href="#">Expiring</a></li>
                 -->
 
-                <li class="dropdown pull-right white">
+                <li class="dropdown pull-right">
                     <a href class="dropdown-toggle" data-toggle="dropdown">{{user.firstName}} <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
+                    <ul class="dropdown-menu dark" role="menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                         <li><a href="#">Something else here</a></li>
