--- a/src/app/login/login.tpl.html
+++ b/src/app/login/login.tpl.html
@@ -29,7 +29,7 @@
         <div class="form-actions">
             <button type="submit" class="btn btn-primary special_b">SIGN IN</button>
 
-            <a href="#/reset" class="btn2 username">username?</a>
+            <a href="#/reset" class="btn2 username">forgot?</a>
         </div>
 
 
