--- a/src/styles/signup.scss
+++ b/src/styles/signup.scss
@@ -86,12 +86,14 @@ margin-right: 10px;
 margin-top: 5px;
 }
 
+
 .host-name {
 float: left;
 font-weight: 400;
 font-size: 1.2em;
 margin-top: 9px;
 color: rgb(120, 143, 173);
+line-height: 18px;
 }
 
 input.btn2 {
