fixing copy... kind of

--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -51,8 +51,7 @@
                     <div class="delete">
                         <i class="fa fa-trash fa-lg"></i>
                     </div>
-					<a href="" clip-click-fallback="fallback(copy)" clip-copy="downloadPageUrl">
-                    	<div class="copy">
+                    	<div class="copy" clip-click-fallback="fallback(copy)" clip-copy="getDownloadFileUrl()">
                         	copy
                     	</div>
                     </a>
