--- a/src/styles/signup.scss
+++ b/src/styles/signup.scss
@@ -49,7 +49,7 @@ margin-right: 20px;
   /* width: 250px; */
   color: #8ba8ce;
   padding: 15px;
-  font-size: 1.05em;
+  font-size: 1.2em;
   transition: .3s;
 }
 
@@ -103,6 +103,11 @@ color: white;
 font-size: 1.3em;
 height: 50px;
 }
+
+.signup-form button.btn.btn-primary.special_b {
+  max-width: 200px;
+  text-align: center;
+  }
 
 .small_3 {
 width: calc(33% - 5px);
