add delete functionality

--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -48,7 +48,7 @@
 
 
                 <div class="right-ops">
-                    <div class="delete">
+                    <div class="delete" ng-click="deleteTapped()">
                         <i class="fa fa-trash fa-lg"></i>
                     </div>
                     	<div class="copy" clip-click-fallback="fallback(copy)" clip-copy="getDownloadFileUrl()">
